vim: make search with * and # match closer to VIM.

* wrap-around: allows us to jump to the end of the buffer when we
   reach the top. (and vice-versa)
 * case-sensitive: makes priv not match FooPrivate
 * word-boundaries: forces us to find whole words that match

https://bugzilla.gnome.org/show_bug.cgi?id=737750